# sterling_sim_docker

./: .gitignore  Dockerfile  README  README.md  alias.sh  bash_utils  cyclonedds.xml  docker-compose.yaml  record_bag_sim.sh  setup.py  sterling.bash
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh
src/: costmap_test.py  deploy_sterling_sim.py  nav2_slam_params.yaml
src/nav2_gradient_costmap_plugin/: nav2_slam_params.yaml
src/nav2_sterling_costmap_plugin/: CMakeLists.txt  package.xml  sterling_layer.xml
src/nav2_sterling_costmap_plugin_py/: logs.txt  nav2_slam_params.yaml  package.xml  setup.cfg  setup.py  sterling_layer.xml
src/nav2_sterling_costmap_plugin_py/nav2_sterling_costmap_plugin_py/: sterling_layer.py
sterling/: package.xml  record_bag_sim.sh  setup.cfg  setup.py
sterling/config/: config.yaml  nav2_params.yaml  params.yaml
sterling/launch/: sim.launch.py  sterling_sim.launch.py
sterling/scripts/: bev.py  bev_costmap.py  deploy_sterling_sim.py  visual_encoder_model.py
sterling/sterling/: bev.py  bev_costmap.py  deploy_sterling_sim.py  proprioception_model.py  train_patern.py  train_representation.py
sterling/sterling/nodes/: global_costmap_builder.py  local_costmap_builder.py
workspace/: record_bag_sim.sh
